--- a/index.html
+++ b/index.html
@@ -17,36 +17,40 @@
 <body>
     <header>
         <div class="logo">
-            <a href="#"><img src="./assets/Sin_título-removebg-preview.png" alt=""></a>
+            <a href="#"><img src="./assets/Sin_título-removebg-preview.png" alt="logo"></a>
         </div>
         <nav>
+            <input type="checkbox" id="checkbox">
+            <label for="checkbox" id="icon">
+                <svg fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
+            </label>
             <ul>
-                <li><a id="inicionav" href="#"> Inicio</a></li>
-                <li><a href="./page/que-ver.html"> ¿Qué ver? </a></li>
-                <li><a href="./page/guias-de-viaje.html"> Guias de viaje </a></li>
-                <li><a href="./page/sobre-mi.html"> Sobre mi </a></li>
-                <li><a href="./page/Contacto.html"> Contacto </a></li>
+                <li><a href="./#">Inicio</a></li>
+                <li><a href="./page/que-ver.html">Que ver?</a></li>
+                <li><a href="./page/guias-de-viaje.html">Guias de viaje</a></li>
+                <li><a href="./page/sobre-mi.html">Sobre mi</a></li>
+                <li><a href="./page/contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <div>
-            <img src="./assets/header.jpg" width="100%" height="300" alt="">
+            <img class="banner" src="./assets/header.jpg"  alt="banner">
         </div>
         <h2>Destinos destacados</h2>
         <div class="random">
             <div class="inicio">
-                <img src="./assets/Paris.jpg" width="300px" height="250px" alt="">
+                <a href="./page/que-ver.html"> <img src="./assets/Paris.jpg"  alt="Paris torre eiffel"></a>
                 <p class="tituloscards">PARIS</p>
                 <p>Lorem ipsum dolor sit amet.</p>
             </div>
             <div class="inicio">
-                <img src="./assets/maldivas.jpg" width="300px" height="250px" alt="">
+                <a href="./page/que-ver.html"><img src="./assets/maldivas.jpg" alt="maldivas mar"></a>
                 <p class="tituloscards">MALDIVAS</p>
                 <p>Lorem ipsum dolor sit amet.</p>
             </div>
             <div class="inicio">
-                <img src="./assets/rio-de-janeiro.jpg" width="300px" height="250px" alt="">
+                <a href="./page/que-ver.html#rio"><img src="./assets/rio-de-janeiro.jpg"  alt="rio de janeiro cristo"></a>
                 <p class="tituloscards">RIO DE JANEIRO</p>
                 <p>Lorem ipsum dolor sit amet.</p>
             </div>
