--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </label>
             <ul>
                 <li><a href="./#">Inicio</a></li>
-                <li><a href="./page/que-ver.html">Que ver?</a></li>
+                <li><a href="./page/que-ver.html">¿Qué ver?</a></li>
                 <li><a href="./page/guias-de-viaje.html">Guias de viaje</a></li>
                 <li><a href="./page/sobre-mi.html">Sobre mi</a></li>
                 <li><a href="./page/contacto.html">Contacto</a></li>
