--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
             <div class="card__destinos">
                 <a href="./page/que-ver.html"> <img src="./assets/Paris.jpg"  alt="Paris torre eiffel"></a>
                 <p class="tituloscards">PARIS</p>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>Todos los must de la "Ciudad de la Luz"</p>
             </div>
             <div class="card__destinos">
                 <a href="./page/que-ver.html"><img src="./assets/maldivas.jpg" alt="maldivas mar"></a>
                 <p class="tituloscards">MALDIVAS</p>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>El regalo que esconden sus aguas</p>
             </div>
             <div class="card__destinos">
                 <a href="./page/que-ver.html#rio"><img src="./assets/rio-de-janeiro.jpg"  alt="rio de janeiro cristo"></a>
                 <p class="tituloscards">RIO DE JANEIRO</p>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>Qué hacer en la "Ciudad Maravillosa"</p>
             </div>
         </div>
     </main>
