termine de eliminar lorem

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="card__destinos">
                 <a href="./page/que-ver.html"> <img src="./assets/Paris.jpg"  alt="Paris torre eiffel"></a>
                 <p class="tituloscards">PARIS</p>
-                <p>Todos los must de la "Ciudad de la Luz"</p>
+                <p>Todos los must de la "Ciudad del Amor"</p>
             </div>
             <div class="card__destinos">
                 <a href="./page/que-ver.html"><img src="./assets/maldivas.jpg" alt="maldivas mar"></a>
