--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Viaja con Maru es Blog de viajes con planes, recomendaciones, guias de viaje y los mejores consejos para viajar y conocer">
+    <meta name="keywords" content="Guias de viaje, Europa, Asia, Africa, America, Viajes, Turismo, Viajar">
     <link rel="icon" href="./assets/Sin_título-removebg-preview.png">
     <title> Inicio | Viaja con Maru </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="./scss/style.css">
 </head>
 
@@ -22,7 +25,10 @@
         <nav>
             <input type="checkbox" id="checkbox">
             <label for="checkbox" id="icon">
-                <svg fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
+                <svg fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16">
+                    </path>
+                </svg>
             </label>
             <ul>
                 <li><a id="inicionav" href="./#">Inicio</a></li>
@@ -35,12 +41,12 @@
     </header>
     <main>
         <div>
-            <img class="banner" src="./assets/header.jpg"  alt="banner">
+            <img class="banner" src="./assets/header.jpg" alt="banner">
         </div>
         <h2>Destinos destacados</h2>
         <div class="card-destinos-inicio">
             <div class="card__destinos">
-                <a href="./page/que-ver.html"> <img src="./assets/Paris.jpg"  alt="Paris torre eiffel"></a>
+                <a href="./page/que-ver.html"> <img src="./assets/Paris.jpg" alt="Paris torre eiffel"></a>
                 <p class="tituloscards">PARIS</p>
                 <p>Todos los must de la "Ciudad del Amor"</p>
             </div>
@@ -50,7 +56,8 @@
                 <p>El regalo que esconden sus aguas</p>
             </div>
             <div class="card__destinos">
-                <a href="./page/que-ver.html#rio"><img src="./assets/rio-de-janeiro.jpg"  alt="rio de janeiro cristo"></a>
+                <a href="./page/que-ver.html#rio"><img src="./assets/rio-de-janeiro.jpg"
+                        alt="rio de janeiro cristo"></a>
                 <p class="tituloscards">RIO DE JANEIRO</p>
                 <p>Qué hacer en la "Ciudad Maravillosa"</p>
             </div>
