--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
     </main>
     <footer>
-        Copyright © 2022 derechos reservados
+        © Copyright Viaja con Maru - 2022 todos los derechos reservados.
     </footer>
     <script src="./js/wow.min.js"></script>
     <script>new WOW().init();</script>
