--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="#"><img src="./assets/Sin_título-removebg-preview.png" alt="logo"></a>
+            <a href="./index.html"><img src="./assets/Sin_título-removebg-preview.png" alt="logo"></a>
         </div>
         <nav>
             <input type="checkbox" id="checkbox">
